--- a/Wheat_data.ipynb
+++ b/Wheat_data.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Wheat_data.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMCjm6V606uMtX8LBJH85od",
+      "authorship_tag": "ABX9TyOgFqyBozRA+YHA5YOuG3MC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,13 +44,26 @@
       "metadata": {
         "id": "9YWtzV1SQCVj",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "3b23e7ea-4db8-4619-d68c-1d476eb79a34"
       },
       "source": [
         "!unzip train.csv.zip"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Archive:  train.csv.zip\n",
+            "  inflating: train.csv               \n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -62,7 +75,7 @@
       "source": [
         "train=pd.read_csv(\"train.csv\")"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -82,7 +95,7 @@
         "  yolo_box=[x,y,w,h]\n",
         "  return(yolo_box)\n"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -95,7 +108,7 @@
       "source": [
         "train['yolo_box'] = train.bbox.apply(convert_to_yolo)"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -106,7 +119,7 @@
         "colab": {}
       },
       "source": [
-        "print(train)"
+        "#print(train)"
       ],
       "execution_count": null,
       "outputs": []
@@ -121,7 +134,7 @@
       "source": [
         "unique=train.image_id.unique()"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -129,30 +142,13 @@
       "metadata": {
         "id": "h3DY5qVobNn3",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "10ce0dce-09ec-4680-d0da-0cd43439760f"
+        "colab": {}
       },
       "source": [
-        "len(unique)"
+        "#len(unique)"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3373"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -162,33 +158,7 @@
         "colab": {}
       },
       "source": [
-        "print(unique)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VAhT-3QoYaV_",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "f=open('b53afdf5c.txt')"
-      ],
-      "execution_count": 41,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "EMsT0Fa5ZPt9",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(f.read())"
+        "#print(unique)"
       ],
       "execution_count": null,
       "outputs": []
@@ -203,7 +173,7 @@
       "source": [
         "x=unique[1]"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,25 +181,13 @@
       "metadata": {
         "id": "MjESitoFFk4G",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "35e151dd-7b25-49fd-8d8e-0b492bf0f6d2"
+        "colab": {}
       },
       "source": [
-        "print(x)"
+        "#print(x)"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "b53afdf5c\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -244,9 +202,42 @@
         "  a='/content/yolo'\n",
         "  b=file\n",
         "  path=os.path.join(a,b)\n",
-        "  os.mknod(path)"
+        "  os.mknod(path)\n",
+        "  file_data= train.query('image_id == \"%s\"' %i)\n",
+        "  boxes = file_data.yolo_box.values\n",
+        "  #with open(file, 'a') as file:\n",
+        "  for j in boxes:\n",
+        "      s = \"0 %s %s %s %s \\n\"\n",
+        "      new_line = (s % tuple(j))\n",
+        "      file.write(new_line)\n"
       ],
-      "execution_count": 214,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oHytY0KZabdr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "f=open('yolo/b53afdf5c.txt')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y0kGx2EqadM7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(f.read())"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -257,9 +248,9 @@
         "colab": {}
       },
       "source": [
-        "z= train.query('image_id == \"%s\"' %x)"
+        "#file_data= train.query('image_id == \"%s\"' %i)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -270,9 +261,9 @@
         "colab": {}
       },
       "source": [
-        "all_boxes = z.yolo_box.values"
+        "#boxes = file_data.yolo_box.values"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,7 +274,7 @@
         "colab": {}
       },
       "source": [
-        "print(all_boxes)"
+        "#print(all_boxes)"
       ],
       "execution_count": null,
       "outputs": []
@@ -293,30 +284,13 @@
       "metadata": {
         "id": "8AndwPBNk9Xh",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "99974585-8362-49bc-86e1-c0706d1854de"
+        "colab": {}
       },
       "source": [
-        "len(all_boxes)"
+        "#len(all_boxes)"
       ],
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "46"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 33
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -326,9 +300,9 @@
         "colab": {}
       },
       "source": [
-        "file= \"%s.txt\" %x"
+        "#file= \"%s.txt\" %x"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -336,25 +310,13 @@
       "metadata": {
         "id": "ZEiYZ8Yb3TPW",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "a6c376a4-b15d-4f71-e068-922c0f882d55"
+        "colab": {}
       },
       "source": [
-        "print(file)"
+        "#print(file)"
       ],
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "b53afdf5c.txt\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -367,7 +329,7 @@
         "#a='/content/yolo'\n",
         "b=file"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,7 +342,7 @@
       "source": [
         "#path=os.path.join(a,b#)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -393,7 +355,7 @@
       "source": [
         "#os.mknod(path)"
       ],
-      "execution_count": 213,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -404,9 +366,9 @@
         "colab": {}
       },
       "source": [
-        "os.mknod(file)"
+        "#os.mknod(file)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,13 +379,13 @@
         "colab": {}
       },
       "source": [
-        " with open(file, 'a') as file: # append lines to file\n",
-        "        for i in all_boxes:\n",
+        " #with open(file, 'a') as file:\n",
+        "        for j in boxes:\n",
         "            s = \"0 %s %s %s %s \\n\"\n",
-        "            new_line = (s % tuple(i))\n",
+        "            new_line = (s % tuple(j))\n",
         "            file.write(new_line)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     }
   ]
