--- a/Wheat_data.ipynb
+++ b/Wheat_data.ipynb
@@ -36,7 +36,7 @@
         "import os\n",
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -44,26 +44,13 @@
       "metadata": {
         "id": "9YWtzV1SQCVj",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "3b23e7ea-4db8-4619-d68c-1d476eb79a34"
+        "colab": {}
       },
       "source": [
         "!unzip train.csv.zip"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Archive:  train.csv.zip\n",
-            "  inflating: train.csv               \n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -75,7 +62,7 @@
       "source": [
         "train=pd.read_csv(\"train.csv\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +82,7 @@
         "  yolo_box=[x,y,w,h]\n",
         "  return(yolo_box)\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +95,7 @@
       "source": [
         "train['yolo_box'] = train.bbox.apply(convert_to_yolo)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +121,7 @@
       "source": [
         "unique=train.image_id.unique()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +198,7 @@
         "      new_line = (s % tuple(j))\n",
         "      file.write(new_line)\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
